--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="work.icu007.learnactivity">
+    package="work.icu007.learnactivity" >
 
     <application
         android:allowBackup="true"
@@ -12,20 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnActivity"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".LearnLayout"
+            android:exported="false" />
         <activity
             android:name=".SecondActivity"
             android:exported="false" >
-
             <intent-filter>
-                <action android:name="work.icu007.learnactivity.ACTION_START"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
+                <action android:name="work.icu007.learnactivity.ACTION_START" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
